--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<title>Штукатурка под ключ Москва</title>
 	<link rel="stylesheet" href="css/mynormalize.css">
 	<link rel="stylesheet" href="css/popup-form-style.css">
